@@ -81,10 +81,10 @@
       <% if @deployment.completed? %>
       &nbsp; &nbsp;
       <%= link_to "Repeat", new_project_stage_deployment_path(current_project, current_stage) + '?repeat=' + h(@deployment.id), :class => 'arrow_link'  %>
+      <% end %>
       <% if @deployment.cancelling_possible? %>
         &nbsp; &nbsp;
         <%= link_to "Cancel", cancel_project_stage_deployment_path(current_project, current_stage, @deployment), :confirm => "Are you sure? Killing this deployment will not cleanup and rollback.", :method => "post", :class => 'arrow_link' %>
-      <% end %>
       <% end %>
     </td>
   </tr>
